import "QueryInfo.proto";
import "TagInfo.proto";
import "NamedTagInfo.proto";

option java_outer_classname="ObjectQueryInfoProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message ObjectQueryInfo {
	optional NamedTagInfo namedTagInfo = 1;
	optional TagInfo tagInfo = 2;
	optional QueryInfo queryInfo = 3;	
}